# ImPlay

./: .clang-format  .gitignore  CMakeLists.txt  README.md  _config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  support-request.md
.github/workflows/: build.yml  release.yml
cmake/: CreateCpackPackage.cmake  GetGitVersion.cmake  GetMpvWinDev.cmake
docs/: README.md  builtin.md  compiling.md
include/: command.h  config.h  dispatch.h  helpers.h  input.h  lang.h  mpv.h  player.h  theme.h  window.h
include/helpers/: dx11.h  imgui.h  lang.h  nfd.h  utils.h
include/views/: about.h  command_palette.h  context_menu.h  debug.h  quick.h  quickview.h  settings.h  view.h
resources/linux/: implay.desktop
resources/macos/: Info.plist.in  app.icns
resources/romfs/lang/: en-US.json  en_US.json  it-IT.json  ko-KR.json  uk-UA.json  zh-Hans.json  zh_CN.json
resources/romfs/mpv/: input.conf  menu.lua  mpv.conf  osc.lua
resources/win32/: app.manifest  app.rc.in
resources/win32/wix/: patch.xml
source/: command.cpp  config.cpp  dispatch.cpp  helpers.cpp  input.cpp  lang.cpp  main.cpp  mpv.cpp  player.cpp  theme.cpp  window.cpp
source/helpers/: dx11.cpp  imgui.cpp  lang.cpp  nfd.cpp  utils.cpp
source/views/: about.cpp  command_palette.cpp  context_menu.cpp  debug.cpp  quick.cpp  quickview.cpp  settings.cpp  view.cpp
